@@ -50,8 +50,9 @@ public class JwtGrantedAuthoritiesConverter implements Converter<Jwt, Collection
 
     private List<GrantedAuthority> extractAuthorityFromClaims(List<String> roles) {
         return roles.stream()
-                    .map(SimpleGrantedAuthority::new)
-                    .collect(Collectors.toList());
+            .map(SimpleGrantedAuthority::new)
+            .map(GrantedAuthority.class::cast)
+            .toList();
     }
 
 }
